<resources>
    <string name="app_name">AdygaLL2</string>
    <string name="version_name_1">1.0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_task_container">TaskContainerActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="results">Результаты</string>
    <string name="to_complete">Завершить</string>
    <string name="task_number">Задание №</string>
    <string name="question">Вопрос:</string>
    <string name="right_answer">Правильный ответ:</string>
    <string name="your_answer">Ваш ответ:</string>
    <string name="username">Username</string>
    <string name="task_title">Задание</string>
    <string name="logo">LOGO</string>
    <string name="username_field">Имя пользователя</string>
    <string name="password_field">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="complete_the_phrase">Дополните фразу:</string>
    <string name="i_cant_listen_now">Не могу сейчас слушать</string>
    <string name="get_answer">Ответить</string>
    <string name="level_title">Уровень</string>
    <string name="lesson_title">Урок</string>
    <string name="translate_into_adyga">Переведите на адыгейский:</string>
    <string name="fill_the_pass">Заполните пропуск:</string>
    <string name="correct_answer">Правильный ответ:</string>
    <string name="you_right">ВСЁ ВЕРНО! МОЛОДЕЦ!</string>
    <string name="you_not_right">НЕПРАВИЛЬНЫЙ ОТВЕТ</string>ng
    <string name="next_text">Следующий</string>
    <string name="lesson_result">Итоги урока</string>
    <string name="new_words_learned">Выучено новых слов</string>
    <string name="mistakes">Ошибки</string>
    <string name="coins_earned">Монет заработано</string>
    <string name="remaining_lives">Оставшиеся жизни</string>
    <string name="passage_time">Время прохождения</string>
    <string name="minutes_and_seconds_format">mm:ss</string>
    <string name="lesson_title_mask">%s. Урок %d. Задание %d.</string>
    <string name="type_image">image/*</string>
    <string name="user_avatar">user_avatar</string>
    <string name="institute_name">Адыгейский республиканский \nинститут гуманитарных \nисследований имени Т. М. Керашева</string>
    <string name="choose_image">Выбрать фото</string>
    <string name="camera">Камера</string>
    <string name="image_from_gallery">Фото из галереи</string>
    <string name="no_name_user">No Name</string>
    <string name="gallery">gallery</string>
    <string name="exit_from_app_question">Вы точно хотите выйти из приложения?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="gallery_permission_denied">isGalleryPermissionDenied</string>
    <string name="camera_permission_denied">isCameraPermissionDenied</string>
    <string name="choose_answer_message">Пожалуйста, выберите ответ</string>
    <string name="game_over">У вас закончились жизни, вы проиграли</string>
    <string name="exit_from_level_question">Вы точно хотите выйти? Ваш прогресс будет утерян</string>
    <string name="no_hp">У вас недостаточно здоровья, зайдите позже</string>
    <string name="ok">Хорошо</string>
    <string name="levels_global">Пройдено уровней:</string>
    <string name="lessons_global">Пройдено уроков:</string>
    <string name="learned_words_global">Выученно слов:</string>
    <string name="global_hours">Всего часов играли:</string>
    <string name="week_hours">Играли часов на этой неделе:</string>
    <string name="change_profile">Редактировать профиль</string>
    <string name="pick_from_gallery">Выбрать фото из галереи</string>
    <string name="make_photo">Сделать снимок</string>
    <string name="enter_new_name">Введите новое имя</string>
    <string name="save_changes">Сохранить изменения и выйти</string>
    <string name="changes_saved">Изменения сохранены</string>
    <string name="user_profile">UserProfile</string>
    <string name="change_success">Данные успешно изменены</string>
    <string name="profile">Профиль</string>
    <string name="help">Помощь</string>
    <string name="contact_us">Связаться с нами</string>
    <string name="about_app">О приложении</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open_drawer">Открыть боковое меню</string>
    <string name="close_drawer">Закрыть боковое меню</string>
    <string name="global_date_format">%d д, %d ч, %d м</string>
    <string name="company_name">Разработано КБНЦ РАН по заказу\n Адыгейского института</string>
    <string name="release_date">Дата релиза 01.06.2023</string>
    <string name="app_version_name">Версия: 1.0</string>
    <string name="about_app_text">
        Актуальность изучения адыгейского языка сейчас находится на высоком уровне.Многие люди хотят научиться говорить на этом красивом языке, но не имеют возможности посещать курсы и занятия.
        Именно поэтому мы создали простое, удобное и интересное приложение, которое помогает изучать адыгский языкв любое время и в любом месте. Наше приложение позволяет не только изучать словарный запас и грамматику адыгскогоязыка, но и закреплять полученные знания через разнообразные игры с различными формами заданий.
        Весь материал представлен в понятном и удобном формате. Изучение адыгского языка с нашим приложением – это увлекательный процесс, ведь игры помогают закреплять знания легко и с удовольствием. Приложение доступно для использования как в офлайн режиме, что позволяет изучать язык в любоеудобное для вас время. Наше приложение – не просто возможность изучить новый язык.Это также возможность расширить свой кругозор, общаться с новыми людьми, находить новые возможностидля карьерного роста.
        Не упустите шанс, наши пользователи уже наслаждаются изучением адыгского языкас нашим приложением, присоединяйтесь к ним!
    </string>
    <string name="right_answer_is">Правильный ответ:</string>
    <string name="not_right_answer">Неправильный ответ</string>
    <string name="homePageTitle">Главная</string>
    <string name="ime_label">AdygeIME</string>
    <string name="first_question_type_hint">
        Первый тип заданий, с которым вы столкнётесь, представляет из себя
четыре картинки, с соответсвующими ими названиями. Выберите ту картинку, которая обозначает заданное в задании слово.
    </string>
    <string name="second_question_type_hint">
        Второй тип заданий представляет собой три слова.
Вам предстоит выбрать то слово, которое является правильным переводом заданному слову.
    </string>
    <string name="third_question_type_hint">
        Третий тип заданий состоит из списка слов, части экрана,
в которую нужно их поместить, кнопок для воспроизведения и остановки звука, а так же,
возможности пропустить вопрос. Ваша задача поставить слова в таком порядке, в котором вы их услышали, либо перевести
услышанное предложение с помощью отдельных слов и словосочетаний. Если вы не можете слушать задание, то вы можете пропустить
его, за это у вас не отнимутся жизни, но и не прибавятся монеты.
    </string>
    <string name="fourth_question_type_hint">
Четвёртый тип заданий схож с третьим, но вместо воспроизведения звука вам даётся текст.
Вам нужно составить предложение из слов и словосочетаний ниже, чтобы пройти уровень.
На текст задания можно нажать, при этом появится подсказка к нажатому слову или словосочетанию.
    </string>
    <string name="five_question_type_hint">
        Пятый тип заданий. Здесь вам нужно перевести слово или предложение, вводя его с помощью клавиатуры в
специальное для этого поле. Предложение можно прослушать с помощью специальных звуковых кнопок.
    </string>
    <string name="sixth_question_type_hint">
        Шестой тип заданий. Вам даётся колонка со словами слева и слова снизу. Нужно сопоставить слова так, чтобы они стояли по порядку
с переводами этих слов.
    </string>
    <string name="seventh_question_type_hint">
        Седьмой тип заданий представляет собой предложение с одним пропущенным словом и тремя вариантами ответа снизу.
Вам нужно поставить на место пропуска то слово, которое по смыслу подходит для данного предложения.
    </string>
    <string name="eight_question_type_hint">
        Восьмой тип заданий немного похож на седьмой, однако здесь у вас
может быть от одного и более пропущенных слов, которые нужно написать в
места пропусков с помощью клавиатуры, слова должны подходить по смыслу в предложении.
    </string>
    <string name="ninth_question_type_hint">
        Девятый тип заданий. Пятый тип заданий. Здесь вам нужно перевести слово или предложение, вводя его с помощью клавиатуры в
специальное для этого поле. Так же вам доступны подсказки при нажатии на данное слово.
    </string>
    <string name="game_hint">
        При входе в приложение вам предоставляется выбор уровней, уровни состоят из 12 уроков, связанных тематикой уровня.
При нажатии на урок вы можете его пройти. Урок состоит из 15 вопросов различной сложности. После выбора или ввода правильного ответа, вам нужно
нажать на кнопку "Ответить" снизу, или, в вопросах с аудированием, вы можете пропустить задание, нажав на текст "Пропустить задание".
За каждый правильный ответ вы получите монетку, а за каждый неправильный у вас отнимут здоровье, оно восстанавливается каждые 5 минут.
Так же, после ответа, вы узнаете, ответили ли вы правильно. В противном случае, вы сможете узнать какой же ответ был правильным.
За пропуск ответа ничего не происходит, вы переходите к следующему заданию. В конце урока вы можете посмотреть на статистику урока, где есть статистика о пройденном уроке.
    </string>
</resources>