<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/resultCard"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardCornerRadius="10dp">

    <TextView
        android:id="@+id/taskNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_number"
        android:layout_marginTop="4dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/taskText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:layout_marginTop="34dp"
        android:layout_marginStart="14dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/rightAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right_answer"
        android:layout_marginTop="64dp"
        android:layout_marginStart="14dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/userAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_answer"
        android:layout_marginTop="94dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/black"/>

</androidx.cardview.widget.CardView>