<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/default_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pt_sans_regular"
        android:text="@string/username"
        android:textColor="@color/pink2"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/avatar"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/changeProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/UserStateTextView"
        android:text="@string/change_profile"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintEnd_toEndOf="@id/name"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/changeProfile"
        app:layout_constraintStart_toStartOf="@id/changeProfile"
        app:layout_constraintEnd_toEndOf="@id/changeProfile"
        android:orientation="vertical"
        android:layout_marginHorizontal="36dp"
        android:layout_marginTop="36dp">

        <TextView
            android:id="@+id/levelProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/levels_global"
            style="@style/UserStateTextView"/>

        <TextView
            android:id="@+id/lessonProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lessons_global"
            style="@style/UserStateTextView"/>

        <TextView
            android:id="@+id/wordsProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learned_words_global"
            style="@style/UserStateTextView"/>

        <TextView
            android:id="@+id/globalHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/global_hours"
            style="@style/UserStateTextView"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>