<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/avatar"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/default_avatar"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_photo"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/cornflower_blue"
        app:icon="@drawable/camera_img"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/avatar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/galleryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pick_from_gallery"
        android:textColor="@color/white"
        app:cornerRadius="8dp"
        android:textSize="16sp"
        android:backgroundTint="@color/cornflower_blue"
        app:icon="@drawable/gallery_img"
        app:layout_constraintEnd_toEndOf="@+id/cameraButton"
        app:layout_constraintStart_toStartOf="@+id/cameraButton"
        app:layout_constraintTop_toBottomOf="@+id/cameraButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayout"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:minHeight="40dp"
        app:boxStrokeColor="@color/blue"
        app:hintTextColor="@color/blue"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusTopStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/galleryButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_new_name"
            android:paddingHorizontal="8dp"
            android:textColor="@color/blue"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginHorizontal="16dp"
        android:backgroundTint="@color/cornflower_blue"
        android:text="@string/save_changes"
        android:textSize="18sp" />

    <include
        android:id="@+id/keyboard"
        layout="@layout/keyboard_view_adyge"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>